# Ejercicios_IndividualesModulo3

./: .gitignore  inventario.json  main.py  pyproject.toml  tareas.txt
src/bloque_1/: ejercicio_1.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_5.py
src/bloque_2/: ejercicio_10.py  ejercicio_6.py  ejercicio_7.py  ejercicio_8.py  ejercicio_9.py
src/bloque_3/: ejercicio_11.py  ejercicio_12.py  ejercicio_13.py  ejercicio_14.py  ejercicio_15.py
src/ejercicios_individualesmodulo3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/bloque_1/: test_ejercicio_1.py  test_ejercicio_2.py  test_ejercicio_3.py  test_ejercicio_4.py  test_ejercicio_5.py
tests/bloque_2/: test_ejercicio_10.py  test_ejercicio_6.py  test_ejercicio_7.py  test_ejercicio_8.py  test_ejercicio_9.py
tests/bloque_3/: test_ejercicio_11.py  test_ejercicio_12.py  test_ejercicio_13.py  test_ejercicio_14.py  test_ejercicio_15.py
