[project]
name = "Ejercicios_IndividualesModulo3"
version = "1.0.0"
description = "Ejercicios individuales del Módulo 3 - SENA"
authors = [
    { name = "Nubia Mayerly Cárdenas Bautista" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
