[project]
name = "ejercicios_individuales_modulo_3"
version = "1.0.0"
description = "Ejercicios del Bloque 1 - Refactorización con funciones."
requires-python = ">=3.10"

dependencies = [
    "rich",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_functions = [
    "test_*"
]
